--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "autoprefixer": "^10.4.21",
     "lucide-react": "^0.539.0",
+    "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.0",
